--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "again": "^0.0.1",
+    "axios": "^1.7.2",
     "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
